エラーの解消

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-project.jftk=C:\\Users\\nobin\\Documents\\hgrepos
-user.properties.file=C:\\Users\\nobin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+project.jftk=C:\\Users\\fujita\\Downloads\\gitFolder\\jftk
+user.properties.file=C:\\Users\\fujita\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
